update firesteel